Update and fix content alignment

--- a/style.css
+++ b/style.css
@@ -51,21 +51,23 @@ h1 {
     font-weight: bolder;
     color: #F9FAF8;
     margin-bottom: 8px;
+    font-family: Montserrat Regular,Montserrat,sans-serif;
 }
 
 p {
-    font-size: 18px;
+    font-size: 16px;
     color: #E5E7EB;
     margin-top: 0;
+    font-family: Montserrat Regular,Montserrat,sans-serif;
 }
 
-button {
+#button {
     background-color: #3882F6;
     border: none;
     color: #F9FAF8;
     font-weight: 700;
-    padding: 5px 20px;
-    border-radius: 4px;
+    padding: 6px 20px;
+    border-radius: 6px;
     width: 100px;
 }
 
@@ -84,13 +86,16 @@ button {
     justify-content: center;
     margin-bottom: 50px;
     margin-top: 40px;
+    font-family: Montserrat Regular,Montserrat,sans-serif;
 }
 
 .text {
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: lighter;
     color: rgb(42, 41, 41);
     text-align: center;
     margin-top: 10px;
+    font-family: Montserrat Regular,Montserrat,sans-serif;
 }
 
 img {
@@ -138,7 +143,53 @@ img {
 
 .ian {
     font-weight: 700;
-    font-size: 18px;
+    font-size: 16px;
     margin-top: 15px;
-    margin-left: 70px;
+    margin-left: 85px;
+    font-family: Montserrat Regular,Montserrat,sans-serif;
+}
+
+.shop {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+}
+
+.background {
+    background-color: #2f3031;
+    width: 1000px;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.heading {
+    font-size: 20px;
+    color: white;
+    font-weight: 600;
+    font-family: Montserrat Regular,Montserrat,sans-serif;
+}
+
+.subtext {
+    font-size: 16px;
+    color: #dfe1e4;
+    font-family: Montserrat Regular,Montserrat,sans-serif;
+    margin-top: 4px;
+}
+
+.button {
+    background-color: #3882F6;
+    border: none;
+    color: #F9FAF8;
+    font-weight: 700;
+    padding: 6px;
+    border-radius: 6px;
+    width: 135px;
 }
